--- a/package/NEWS
+++ b/package/NEWS
@@ -1,6 +1,9 @@
 Package: SCALE
 ===================
 
+05/05/2017
+Fixed bugs by read length in estimating technical-noise associated parameters.
+
 04/06/2017
 Optimized EM algorithm for gene classification.
 
